[package]
name = "hyper_aws_sig_verify"
version = "0.1.0"
authors = ["David Cuthbert <dacut@kanga.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_sig_verify = { version = "^0.8", path = "../rust-aws-sig" }
chrono = "^0.4"
futures = "^0.3"
log = "^0.4"
http = "^0.2"
http-body = "^0.4"
hyper = { version = "^0.14", features = [ "stream", "tcp", "http1", "http2" ], path = "../hyper" }
serde_json = "1.0"
tokio = { version = "^1.4", features = [ "macros", "rt" ] }
